syntax = "proto3";
package youtube.response.browse;

message Browse{
  ResponseContext responseContext = 1;
  Contents contents = 9;
  Contents onResponseReceivedActions = 10;
}
message ResponseContext{
  repeated ServiceTrackingParams serviceTrackingParams = 6;
}
message ServiceTrackingParams{
  int32 service = 1;
  repeated Params params = 2;
}
message Params{
  string key = 1;
  string value = 2;
}

message Contents{
  BrowseResultsRenderer browseResultsRenderer = 58173949;
  VideoWithContextRenderer videoWithContextRenderer = 153515154;
  RichGridRenderer richGridRenderer = 49399797;
}

message BrowseResultsRenderer{
  repeated Tab tabs = 1;
}
message Tab{
  TabRenderer tabRenderer = 58174010;
}
message TabRenderer{
  Contents contents = 4;
}
message RichGridRenderer{
  repeated RichGridContent richGridContents = 1;
}
message RichGridContent{
  RichItemRenderer richItemRenderer = 50195462;
  RichSectionRenderer richSectionRenderer = 51845067;
  MusicDescriptionShelfRenderer musicDescriptionShelfRenderer = 221496734;
}
message RichItemRenderer{
  repeated RichItemContent richItemContent = 1;
}
message RichItemContent{
  VideoWithContextRenderer videoWithContextRenderer = 153515154;
}

message VideoWithContextRenderer{
  VideoRendererContent videoRendererContent = 172660663;
}

message VideoRendererContent{
  VideoInfo videoInfo = 1;
  RenderInfo renderInfo = 2;
}

message VideoInfo{
  VideoContext videoContext = 168777401;
}
message VideoContext{
  VideoContent videoContent = 5;
}
message VideoContent{
  TimedLyricsRender timedLyricsRender = 465160965;
}
message TimedLyricsRender{
  TimedLyricsContent timedLyricsContent = 4;
}
message TimedLyricsContent{
  repeated Run runs = 1;
  string footerLabel = 2;
}
message RenderInfo{
  LayoutRender layoutRender = 183314536;
}
message LayoutRender{
  string eml = 1;
}
message RichSectionRenderer{
  RichSectionContent richSectionContent = 5;
}
message RichSectionContent{
  ReelShelfRenderer reelShelfRenderer = 51431404;
}
message ReelShelfRenderer{
  repeated RichItemContent richItemContent = 1;
}
message MusicDescriptionShelfRenderer{
  Label description = 3;
  Label footer = 10;
}
message Label{
  repeated Run runs = 1;
}
message Run{
  string text = 1;
}
